# game-kiosk

./: .gitignore  Cargo.toml  README.md  charades.desktop  kiosk.desktop
assets/: easy.txt  hard.txt
charades/: Cargo.toml
charades/assets/: medium.txt
charades/src/: app.rs  fb.rs  input.rs  kbd.rs  main.rs  render.rs  words.rs
pictionary/: Cargo.toml
pictionary/src/: app.rs  fb.rs  main.rs  render.rs  words.rs  x11_backend.rs
scripts/: deploy_pi_remote.sh  install_pi_local.sh  make_pi_bundle.sh
src/: app.rs  input.rs  main.rs  render.rs  words.rs  x11_backend.rs
trivia/: Cargo.toml
trivia/assets/: bible-books-chapter-counts.txt  dictionary-words.txt  riddle-topics.json
trivia/src/: app.rs  input.rs  kbd.rs  main.rs  render.rs  x11_backend.rs
