[package]
name = "charades"
version = "0.1.0"
edition = "2021"

[dependencies]
fontdue = "0.9"
rand = "0.10.0"

# Linux (Pi): direct framebuffer + evdev OR pure-Rust X11 — zero shared-library deps
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
x11rb = { version = "0.13", features = ["xfixes"] }

# macOS: minifb window for local smoke-testing
[target.'cfg(not(target_os = "linux"))'.dependencies]
minifb = "0.28.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
