[package]
name = "trivia"
version = "0.1.0"
edition = "2021"

[dependencies]
fontdue = "0.9"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
x11rb = { version = "0.13", features = ["xfixes"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
minifb = "0.28.0"
